.apex/src/objects/OrderItem__c.object
<CustomObject>
    <fields>
        <fullName>OrderId__c</fullName>
        <label>OrderId</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>OrderItems</relationshipLabel>
        <relationshipName>ORDRID</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <label>ProductID</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>OrderItems</relationshipLabel>
        <relationshipName>PRODID</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OrderItem</label>
    <nameField>
        <label>Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>